fix: z-index issues.

--- a/services/orchest-webserver/client/src/styles/main.scss
+++ b/services/orchest-webserver/client/src/styles/main.scss
@@ -777,18 +777,7 @@ button.themed-secondary {
 }
 
 .pipeline-view {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-
   .pipeline-viewport {
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    position: absolute;
-
     &.ready-to-pan {
       cursor: grabbing; // as a fallback
       cursor: grab;
